# python-fuelclient

./: requirements.txt  setup.cfg  setup.py
fuelclient/: client.py
fuelclient/cli/: arguments.py  parser.py
fuelclient/cli/actions/: base.py
fuelclient/tests/: test_client.py
