[metadata]
name = python-fuelclient
version = 6.0.0-alpha
description = Command line interface and Python API wrapper for Fuel.
author = Mirantis Inc.
author-email = product@mirantis.com

[files]
packages =
    gpgdisk

[entry_points]
console_scripts =
    fuel = fuelclient.cli.parser:main

[pbr]
autodoc_index_modules = True

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
